-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
29bbca3f8 (dev), 30edd79a6 (6.8)
When a ComboBox's popupType is set to Popup.Window, setting its focus to false doesn't close the popup.
To reproduce:
- Open and run the attached project.
- Press CTRL+F to set the focus to false.
- The popup does not close.
Failed test:
FAIL! : tst_controls::Universal::ComboBox::test_focus() 'wait for signal closed' returned FALSE. ()
Loc: [/home/edc/dev/qt/src/dev/qtdeclarative/tests/auto/quickcontrols/controls/data/tst_combobox.qml(1133)]